--- a/app.json
+++ b/app.json
@@ -39,6 +39,14 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "my_-first-app-development-new",
+          "organization": "devwizards"
+        }
       ]
     ],
     "experiments": {
